# databricks-notebook-linter

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  uv-publish.py
.github/workflows/: ci.yml
src/databricks_notebook_linter/: __init__.py  fix_magic.py
tests/: conftest.py  fix_magic_test.py  test_check_file.py  test_fix_file_basic.py  test_fix_file_blocks.py  test_integration.py  test_main.py
