[project]
name = "databricks-notebook-linter"
version = "0.1.0"
description = "Pre-commit hook to fix bare magic commands in Databricks .py-format notebooks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []
authors = [
    { name = "YipitData" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/Yipit/databricks-notebook-linter"
Repository = "https://github.com/Yipit/databricks-notebook-linter"
Issues = "https://github.com/Yipit/databricks-notebook-linter/issues"

[project.scripts]
fix-databricks-magic = "databricks_notebook_linter.fix_magic:main"

[[tool.uv.index]]
url = "https://pypi.org/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_notebook_linter"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=databricks_notebook_linter --cov-branch --cov-report=term-missing"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "RUF",
    "PT",
]
ignore = [
    "E501",
]
